fixing spacing my picture, name, and job title

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,10 @@ body {
    background-image: url(../assets/images/279730-P66R53-825.jpg);
    background-repeat: repeat;
 }
+#myPic {
+    max-width: 150px; 
+    margin-left: 10px
+}
 
 #mainContent {
     margin-top: 40px;
@@ -18,4 +22,17 @@ body {
 
 .aboutText{
     margin-bottom: 40px;
+}
+
+@media (max-width: 575.98px) {
+    #myPic {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #nameCard {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
